--- a/Index.html
+++ b/Index.html
@@ -194,7 +194,7 @@
                      <h2 class="projects-title">YouTube.com Clone</h2>
 
                      <p class="projects-description">
-                        This project is used to purchase womens fashion Products Named <b>Nivisha's Fashion</b>. Created by using HTML, CSS & JavaScript.
+                        This project is a clone of YouTube.com UI The Purpose of created this project for practice HTML & CSS. Created by using HTML & CSS
                      </p>
                   </div>
 
@@ -220,7 +220,7 @@
                      <h2 class="projects-title">Rock Paper Scissors</h2>
 
                      <p class="projects-description">
-                        This project is used to purchase womens fashion Products Named <b>Nivisha's Fashion</b>. Created by using HTML, CSS & JavaScript.
+                        Rock Paper Scissors Project is a simple game. Created for pratice with HTML, CSS & Js. It was Created by using HTML, CSS & JavaScript.
                      </p>
                   </div>
 
