--- a/Index.html
+++ b/Index.html
@@ -170,7 +170,7 @@
 
                      <p class="projects-description">
                      
-                     This pro is created for entertainment purpose to watch movies on online. Created by using HTML, CSS & JavaScript.
+                     This project is created for entertainment purpose to watch movies on online. Created by using HTML, CSS & JavaScript.
                      </p>
                   </div>
 
