--- a/Index.html
+++ b/Index.html
@@ -318,7 +318,7 @@
 
       <!--FOOTER-->
       <footer class="footer">
-         <div class="footer-container ccontainer grid">
+         <div class="footer-container container grid">
             <ul class="footer-links">
                <li>
                   <a href="#home" class="footer-link">Home</a>
@@ -331,8 +331,8 @@
                </li>
             </ul>
 
-            <span class="footer-copy">
-               &#169; All Rights Reserved
+          <span class="footer-copy">
+              
             </span>
          </div>
       </footer>
